--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "screens-js",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Screens Framework",
-    "main": "lib/screens.js",
+    "main": "lib/screens.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node -r ts-node/register project/screens.tsx",
