--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     // "lib": [],                             /* Specify library files to be included in the compilation. */
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
-    "declaration": true, /* Generates corresponding '.d.ts' file. */
-    "declarationMap": true, /* Generates a sourcemap for each corresponding '.d.ts' file. */
+    "declaration": true, /* Generates corresonding '.d.ts' file. */
+    "declarationMap": true, /* Generates a sourcemap for each corresonding '.d.ts' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
