--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,7 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "jsx": "react",
-    "sourceMap": true
+    "sourceMap": true,
+    "watch": true
   }
 }
